tests/parser/bad/missing_pattern.hel
// @name missing_pattern
// @phase parser
// @expect error

x = match 1 { => 0 };
